# lapse

./: README.md
src/: .hgignore  CMakeLists.txt
src/.hg/: dirstate  undo.dirstate
src/.hg/cache/: branchheads-served
src/.hg/store/: 00changelog.i  00manifest.i  fncache  phaseroots  undo
src/.hg/store/data/: _c_make_lists.txt.i  ~2ehgignore.i
src/.hg/store/data/cmake-modules/: _find_exiv2.cmake.i  _find_j_p_e_gturbo.cmake.i  _find_lcms2.cmake.i  _find_package_handle_standard_args.cmake.i
src/.hg/store/data/color/: lcmswrapper.h.i  profile.h.i  profilefactory.h.i  transform.h.i  transformfactory.h.i
src/.hg/store/data/effects/: _c_make_lists.txt.i  cropresize.cc.i  cropresize.h.i  effectfactory.cc.i  effectfactory.h.i  exposure.cc.i  exposure.h.i  whitebalance.cc.i  whitebalance.h.i
src/.hg/store/data/exifprops/: _c_make_lists.txt.i  exifprops.cc.i  exifprops.h.i
src/.hg/store/data/file/: _c_make_lists.txt.i  baseio.h.i  imgio.cc.i  imgio.h.i  jpeg.cc.i  jpeg.h.i
src/.hg/store/data/image/: image-impl.h.i  image.h.i  imgbuffer-impl.h.i  imgbuffer.h.i  metadata.h.i
src/.hg/store/data/main/: _c_make_lists.txt.i  lapse.cc.i  processor.cc.i  processor.h.i
src/.hg/store/data/misc/: callback.h.i  endian.h.i  fixwidthmanip.h.i  refcount.h.i  timer.h.i  usetops.h.i
src/cmake-modules/: FindJPEGturbo.cmake
src/color/: lcmswrapper.h  profile.h  profilefactory.h  transform.h  transformfactory.h
src/effects/: CMakeLists.txt  cropresize.cc  cropresize.h  effectfactory.cc  effectfactory.h  exposure.cc  exposure.h  pad.cc  pad.h  whitebalance.cc  whitebalance.h
src/exifprops/: CMakeLists.txt  exifprops.cc  exifprops.h
src/file/: CMakeLists.txt  baseio.h  imgio.cc  imgio.h  jpeg.cc  jpeg.h
src/image/: image-impl.h  image.h  imgbuffer-impl.h  imgbuffer.h  metadata.h
src/main/: CMakeLists.txt  lapse.cc  processor.cc  processor.h
src/misc/: callback.h  endian.h  fixwidthmanip.h  refcount.h  timer.h  usetops.h
src/transforms/: CMakeLists.txt  boxsampler.h  convsampler-impl.h  convsampler.h  cubicsampler.cc  cubicsampler.h  lanczossampler.cc  lanczossampler.h  linsampler.cc  linsampler.h  resizer-impl.h  resizer.h  sampler.h  shearer-impl.h  shearer.h
(+13 files in other folders)
